# prototipo_validador

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt  run.sh
app/: AGENTS.md  main.py
config/: AGENTS.md  clientes_agentes.json  fuentes_catalogo.json  padron_layouts.json  portal_adapters.json  regimenes_catalogo.json
docs/: AGENTS.md  ANTECEDENTES_FUENTES.md  ARQUITECTURA_ENTERPRISE.md  AUDITORIA_REGIMENES_ARGENTINA.md  AUTOMATIZACION_PADRONES.md  AUTOMATIZACION_PLAYWRIGHT_PADRONES.md  CLOUD_RUN_PADRON_JOBS.md  DICCIONARIO_DATOS_LEGAJO.md  FUENTES_OFICIALES_PADRONES.md  MANUAL_USUARIO.md  MVP_SUPABASE_CCU.md  OPERACION_TRIBUTARIA.md  PADRONES_CAMPO_REALES_2026-05-26.md  PADRONES_CASOS_REALES.md  PADRONES_FORMATOS_BACKLOG.md  PADRONES_GOLDEN_CASES_REALES.md  PADRONES_LAYOUTS.md  PADRONES_MUESTRAS_REALES_RESULTADOS.md  PEDIDO_DATOS_CCU_IMPUESTOS.md  PEDIDO_PENDIENTE_LUIS_RONCHI.md  PERFIL_FISCAL_CICSA.md  PILOTO_CCU_READINESS.md  PLAN_MEJORAS_PRIORIZADO_2026-06.md  REGISTRO_MAESTRO_PADRONES.md  ROADMAP_ENTERPRISE.md  VALIDACION_MUESTRAS_REALES.md
padrones/: AGENTS.md  PadronARBA.csv  PadronCABA.csv  PadronEntreRios.csv  README.md
scripts/: AGENTS.md  auditar_formatos_padrones.py  check_dox.py  descargar_fuentes.py  descargar_portal.py  generar_casos_padrones.py  generar_golden_cases_reales.py  importar_padron.py  indexar_padron_supabase.py  process_padron_job.py  revisar_fuentes.py  validar_muestra_padron.py
supabase/: AGENTS.md
tests/: AGENTS.md  test_accesos_api.py  test_accesos_fiscales.py  (+36 more)
(+55 files in other folders)
